--- a/pet-clinic-web/src/main/resources/templates/owners/owner-details.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/owner-details.html
@@ -2,70 +2,70 @@
 <html lang="en"  xmlns:th="http://www.thymeleaf.org"
       th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <body>
-    <h2>Owner Information</h2>
+<h3>Owner Information</h3>
 
-    <table class="table table-striped" th:object="${owner}">
-        <tr>
-            <th>Name</th>
-            <td><b th:text="*{firstName + ' ' + lastName}"></b></td>
-        </tr>
-        <tr>
-            <th>Address</th>
-            <td th:text="*{address}"></td>
-        </tr>
-        <tr>
-            <th>City</th>
-            <td th:text="*{city}"></td>
-        </tr>
-        <tr>
-            <th>Telephone</th>
-            <td th:text="*{telephone}"></td>
-        </tr>
-    </table>
+<table class="table table-striped" th:object="${owner}">
+    <tr>
+        <th>Name</th>
+        <td><b th:text="*{firstName + ' ' + lastName}"></b></td>
+    </tr>
+    <tr>
+        <th>Address</th>
+        <td th:text="*{address}"></td>
+    </tr>
+    <tr>
+        <th>City</th>
+        <td th:text="*{city}"></td>
+    </tr>
+    <tr>
+        <th>Telephone</th>
+        <td th:text="*{telephone}"></td>
+    </tr>
+</table>
 
-    <a th:href="@{{id}/edit(id=${owner.id})}" class="btn btn-secondary">Edit Owner</a>
-    <a th:href="@{{id}/pets/new(id=${owner.id})}" class="btn btn-secondary">New Owner</a>
+<a th:href="@{{id}/edit(id=${owner.id})}" class="btn btn-secondary">Edit Owner</a>
+<a th:href="@{{id}/pets/new(id=${owner.id})}" class="btn btn-secondary">New Owner</a>
 
-    <br>
-    <br>
-    <br>
-    <h2>Pets and Visits</h2>
+<br>
+<br>
+<br>
+<h3>Pets and Visits</h3>
 
-    <table class="table table-striped">
-        <tr th:each="pet : ${owner.pets}">
-            <td valign="top">
-                <dl class="dl-horizontal">
-                    <dt>Name</dt>
-                    <dd th:text="${pet.name}"></dd>
-                    <dt>Birth Date</dt>
-                    <dd th:text="${#temporals.format(pet.birthDate, 'yyyy-MM-dd')}"></dd>
-                    <dt>Type</dt>
-                    <dd th:text="${pet.petType}"></dd>
-                </dl>
-            </td>
-            <td valign="top">
-                <table class="table-condensed">
-                    <thead>
-                        <tr>
-                            <th>Visit Date</th>
-                            <th>Description</th>
-                        </tr>
-                    </thead>
-                    <tr th:each="visit : ${pet.visits}">
-                        <td th:text="${#temporals.format(visit.date, 'yyyy-MM-dd')}"></td>
-                        <td th:text="${visit?.description}"></td>
-                    </tr>
+<table class="table table-striped">
+    <tr th:each="pet : ${owner.pets}">
+        <td valign="top">
+            <dl class="dl-horizontal">
+                <dt>Name</dt>
+                <dd th:text="${pet.name}"></dd>
+                <dt>Birth Date</dt>
+                <dd th:text="${#temporals.format(pet.birthDate, 'yyyy-MM-dd')}"></dd>
+                <dt>Type</dt>
+                <dd th:text="${pet.petType}"></dd>
+            </dl>
+        </td>
+        <td valign="top">
+            <table class="table-condensed">
+                <thead>
                     <tr>
-                        <td>
-                            <a th:href="@{{ownerId}/pets/{petId}/edit(ownerId=${owner.id},petId=${pet.id})}" class="btn">Edit</a>
-                        </td>
-                        <td>
-                            <a th:href="@{{ownerId}/pets/{petId}/visits/new(ownerId=${owner.id},petId=${pet.id})}" class="btn">Add</a>
-                        </td>
+                        <th>Visit Date</th>
+                        <th>Description</th>
                     </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
+                </thead>
+                <tr th:each="visit : ${pet.visits}">
+                    <td th:text="${#temporals.format(visit.date, 'yyyy-MM-dd')}"></td>
+                    <td th:text="${visit?.description}"></td>
+                </tr>
+                <tr>
+                    <td>
+                        <a th:href="@{{ownerId}/pets/{petId}/edit(ownerId=${owner.id},petId=${pet.id})}" class="btn btn-light">Edit</a>
+                    </td>
+                    <td>
+                        <a th:href="@{{ownerId}/pets/{petId}/visits/new(ownerId=${owner.id},petId=${pet.id})}" class="btn btn-light">Add</a>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
 </body>
 </html>
