github action distribution Management

--- a/pet-clinic-web/src/main/resources/templates/owners/owner-details.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/owner-details.html
@@ -57,10 +57,10 @@
                     </tr>
                     <tr>
                         <td>
-                            <a th:href="@{{ownerId}/pets/{petId}/edit(ownerId=${owner.id},petId=${pet.id})}" class="btn">Edit</a>
+                            <a th:href="@{{ownerId}/pets/{petId}/edit(ownerId=${owner.id},petId=${pet.id})}" class="btn btn-light">Edit</a>
                         </td>
                         <td>
-                            <a th:href="@{{ownerId}/pets/{petId}/visits/new(ownerId=${owner.id},petId=${pet.id})}" class="btn">Add</a>
+                            <a th:href="@{{ownerId}/pets/{petId}/visits/new(ownerId=${owner.id},petId=${pet.id})}" class="btn btn-light">Add</a>
                         </td>
                     </tr>
                 </table>
