--- a/pet-clinic-web/src/main/resources/templates/owners/find-owner.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/find-owner.html
@@ -19,13 +19,13 @@
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Find Owner</button>
+            <button type="submit" class="btn btn-secondary">Find Owner</button>
         </div>
     </div>
 </form>
 
 <br>
-<a class="btn btn-default" th:href="@{/owners/new}">Add Owner</a>
+<a class="btn btn-secondary" th:href="@{/owners/new}">Add Owner</a>
 </body>
 </html>
 
