--- a/pet-clinic-web/src/main/resources/templates/owners/create-or-update-owner-form.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/create-or-update-owner-form.html
@@ -7,11 +7,11 @@
 
 <form th:object="${owner}" class="form-horizontal" id="add-owner-form" method="post">
     <div class="form-group has-feedback">
-        <input th:replace="~{fragments/inputField :: input ('First Name', 'firstName', 'text')}">
-        <input th:replace="~{fragments/inputField :: input ('Last Name', 'lastName', 'text')}">
-        <input th:replace="~{fragments/inputField :: input ('Address', 'address', 'text')}">
-        <input th:replace="~{fragments/inputField :: input ('City', 'city', 'text')}">
-        <input th:replace="~{fragments/inputField :: input ('Telephone', 'telephone', 'text')}">
+        <input th:replace="~{fragments/inputField :: input ('First Name', 'firstName', 'text')}" />
+        <input th:replace="~{fragments/inputField :: input ('Last Name', 'lastName', 'text')}" />
+        <input th:replace="~{fragments/inputField :: input ('Address', 'address', 'text')}" />
+        <input th:replace="~{fragments/inputField :: input ('City', 'city', 'text')}" />
+        <input th:replace="~{fragments/inputField :: input ('Telephone', 'telephone', 'text')}" />
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
