--- a/pet-clinic-web/src/main/resources/templates/owners/find-owner.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/find-owner.html
@@ -1,14 +1,14 @@
-<html xmlns:th="http://www.thymeleaf.org"
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml"
       th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <body>
 <h3>Find Owners</h3>
 
-<form th:object="${owner}" th:action="@{/owners}" method="get" class="form-horizontal" id="search-owner-form">
+<form th:object="${owner}" th:action="@{/owners}" th:method="get" class="form-horizontal" id="search-owner-form">
     <div class="form-group">
         <div class="control-group" id="lastNameGroup">
             <label class="col-sm-2 control-label">Last Name</label>
             <div class="col-sm-10">
-                <input class="form-control" th:field="*{lastName}" size="30" maxlength="80" />
+                <input type="text" th:field="${owner.lastName}" size="30" maxlength="80" class="form-control"  />
                 <span class="help-inline">
                     <div th:if="${#fields.hasAnyErrors()}">
                         <p th:each="err : ${#fields.allErrors()}" th:text="${err}"></p>
