--- a/pet-clinic-web/src/main/resources/templates/pets/create-or-update-pet-form.html
+++ b/pet-clinic-web/src/main/resources/templates/pets/create-or-update-pet-form.html
@@ -4,7 +4,7 @@
 <body>
     <h3><th:block th:if="${pet['new']}">New </th:block>Pet</h3>
     <form th:object="${pet}" class="form-horizontal" method="post">
-        <input type="hidden" name="id" th:value="*{id}">
+        <input type="hidden" name="id" th:value="${id}">
         <div class="form-group has-feedback">
             <div class="form-group">
                 <label class="col-sm-2 control-label">Owner</label>
@@ -14,11 +14,11 @@
             </div>
             <input th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}" />
             <input th:replace="~{fragments/inputField :: input ('Birth Date', 'birthDate', 'date')}" />
-            <input th:replace="~{fragments/inputField :: select ('Type', 'petType', ${types})}" />
+            <input th:replace="~{fragments/selectField :: select ('Type', 'petType', ${types})}" />
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button th:with="text=@{pet['new']} ? 'Add Pet' : 'Update Pet'" class="btn btn-secondary" type="submit" th:text="${text}">Add Pet</button>
+                <button th:with="text=${pet['new']} ? 'Add Pet' : 'Update Pet'" class="btn btn-secondary" type="submit" th:text="${text}">Add Pet</button>
             </div>
         </div>
     </form>
