--- a/pet-clinic-web/src/main/resources/templates/owners/owner-details.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/owner-details.html
@@ -24,7 +24,7 @@
     </table>
 
     <a th:href="@{{id}/edit(id=${owner.id})}" class="btn btn-secondary">Edit Owner</a>
-    <a th:href="@{{id}/pets/new(id=${owner.id})}" class="btn btn-secondary">New Owner</a>
+    <a th:href="@{{id}/pets/new(id=${owner.id})}" class="btn btn-secondary">Add New Pet</a>
 
     <br>
     <br>
