--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'home')}">
-<head>
-    <meta charset="UTF-8">
-    <title>Vet List</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <body>
-    <h1 th:text="'Vet List'">List Vet ...</h1>
 
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th style="width: 150px;">Id</th>
-            <th style="width: 150px;">First Name</th>
-            <th style="width: 150px;">Last Name</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="vet : ${vets}">
-            <td th:text="${vet.id}">1</td>
-            <td th:text="${vet.firstName}">Test</td>
-            <td th:text="${vet.lastName}">Test</td>
-        </tr>
-        </tbody>
-    </table>
+<h3>Veterinarians</h3>
+
+<table id="vets" class="table table-striped">
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Specialities</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="vet : ${vets}">
+        <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
+        <td>
+                <span th:each="speciality : ${vet.specialities}"
+                      th:text="${speciality.description + ' '}"></span>
+            <span th:if="${vet?.specialities?.size() == 0}">none</span>
+        </td>
+    </tr>
+    </tbody>
+</table>
+
 </body>
 </html>
